--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "bugs": {
     "url": "https://github.com/1cgonza/moebius/issues"
   },
+  "scripts": {
+    "start": "grunt --force"
+  },
   "homepage": "https://github.com/1cgonza/moebius#readme",
   "devDependencies": {
     "autoprefixer": "^6.3.1",
